--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@
 /.web-server-pid
 ###< symfony/web-server-bundle ###
 /nbproject/private/
+###> symfony/webpack-encore-pack ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-pack ###
