--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
     "devDependencies": {
         "@symfony/webpack-encore": "^0.20.0",
-        "bootstrap": "^4.1.3",
-        "node-sass": "^4.9.4",
-        "sass-loader": "^7.1.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
@@ -15,7 +12,7 @@
         "build": "encore production"
     },
     "dependencies": {
-        "jquery": "^3.3.1",
-        "popper.js": "^1.14.4"
+        "bootstrap": "^4.1.3",
+        "jquery": "^3.3.1"
     }
 }
