--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,12 @@
 index:
     path: /
     controller: App\Controller\HomepageController::index
+
+candidat_show:
+    path: /candidat
+    controller: App\Controller\CandidatController::index
+    
+orp_show:
+    path: /orp
+    controller: App\Controller\OrpController::index
+    
