--- a/.env.dist
+++ b/.env.dist
@@ -13,7 +13,8 @@ APP_SECRET=1ed6617ecd1d39b9523514da9f8367fa
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+#DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://admin:admin1234@127.0.0.1:3306/erp_lab4tech
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
