--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Remove nbproject from repo
+/nbproject/
+/nbproject/
+# Remove package-lock.json from repo as we use yarn
+/package-lock.json
 
 ###> symfony/framework-bundle ###
 /.env
@@ -14,7 +19,7 @@
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
-/nbproject/private/
+
 ###> symfony/webpack-encore-pack ###
 /node_modules/
 /public/build/
