--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,15 @@
 {
+    "name": "lab4tech erp",
+    "description": "ERP lab4tech project on symfony4",
     "type": "project",
     "license": "proprietary",
+    "authors": [
+        {
+            "name": "Claude Janz",
+            "email": "claudejanz@gmail.com",
+            "homepage": "https://klod.ch"
+        }
+    ],
     "require": {
         "php": "^7.1.3",
         "ext-ctype": "*",
