--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Remove nbproject from repo
 /nbproject/
-/nbproject/
 # Remove package-lock.json from repo as we use yarn
 /package-lock.json
+
+# Remove tests reports
+/tests/reports/
 
 ###> symfony/framework-bundle ###
 /.env
