--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -32,4 +32,17 @@
     <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
     </listeners>
+
+    <logging>
+        <filter>
+                <whitelist>
+                        <directory suffix=".php">./src</directory>
+                        <exclude>
+                        </exclude>
+                </whitelist>
+        </filter>
+
+        <log type="coverage-html" target="./tests/reports" charset="UTF-8" yui="true" highlight="true"/>
+        <log type="coverage-clover" target="./tests/reports/logs/clover.xml"/>
+    </logging>
 </phpunit>
