--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,7 @@
         <env name="APP_DEBUG" value="1" />
         <env name="APP_SECRET" value="s$cretf0rt3st" />
         <env name="SHELL_VERBOSITY" value="-1" />
+        <env name="DATABASE_URL" value="mysql://admin:admin1234@mysql:3306/erp_lab4tech" />
         <!-- define your env variables for the test env here -->
     </php>
 
@@ -26,6 +27,10 @@
     <filter>
         <whitelist>
             <directory>src</directory>
+            <directory>templates</directory>
+            <exclude>
+                <file>src/Kernel.php</file>
+            </exclude>
         </whitelist>
     </filter>
 
@@ -37,8 +42,7 @@
         <filter>
                 <whitelist>
                         <directory suffix=".php">./src</directory>
-                        <exclude>
-                        </exclude>
+                        <directory suffix=".twig">./templates</directory>
                 </whitelist>
         </filter>
 
