--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "devDependencies": {
         "@symfony/webpack-encore": "^0.20.0",
         "bootstrap": "^4.1.3",
-        "node-sass": "^4.9.4",
         "sass-loader": "^7.1.0",
         "webpack-notifier": "^1.6.0"
     },
@@ -15,7 +14,9 @@
         "build": "encore production"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.4.1",
         "jquery": "^3.3.1",
+        "node-sass": "^4.9.4",
         "popper.js": "^1.14.4"
     }
 }
