--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@fortawesome/fontawesome-free": "^5.4.1",
         "jquery": "^3.3.1",
         "node-sass": "^4.9.4",
-        "popper.js": "^1.14.4"
+        "popper.js": "^1.14.4",
+        "tempusdominus-bootstrap-4": "^5.1.2"
     }
 }
